--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -44,7 +44,7 @@
         </tr>
       </table>
       <%= link_to "編集する", edit_admin_customer_path, class: 'btn btn-success' %>
-      <%= link_to "注文履歴一覧を見る", admin_order_path(@customer), class: 'btn btn-primary' %>
+      <%= link_to "注文履歴一覧を見る", admin_root_path(@customer.id), class: 'btn btn-primary' %>
     </div>
   </div>
 </div>
